<resources>
    <!-- App Name -->
    <string name="app_name">Event Reminder</string>

    <!-- Menu Items -->
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <!-- Tab Items -->
    <string name="future_tabs">Future Events</string>
    <string name="past_tabs">Past Events</string>

    <!-- Buttons -->
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>

    <!-- Content Description -->
    <string name="add_image">Add image</string>
    <string name="repeat_menu_dropdown">Repeat Dropdown Menu</string>

    <!-- Activity Label -->
    <string name="add_event_label">Add an event</string>
    <string name="edit_event_label">Edit an event</string>

    <!-- Labels -->
    <string name="event_name">Enter event name:</string>
    <string name="event_date">Date:</string>
    <string name="event_description">Describe your event(optional):</string>
    <string name="event_reminder">Reminder:</string>
    <string name="event_repeat">Repeat:</string>
    <string name="clear_link">Clear</string>

    <!-- Spinner Values -->
    <string-array name="repeat_values">
        <item>only once</item>
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
        <item>yearly</item>
    </string-array>


    <string name="event_name2">Name</string>
    <string name="event_date2">Date</string>
    <string name="event_description2">Description</string>
    <string name="event_reminder2">Reminder</string>
    <string name="event_repeat2">Repeat</string>
</resources>
